// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`surfaces (dark theme) AlertCard 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 0.55)",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "#1C1A17",
        "borderRadius": 8,
        "marginTop": 260,
        "width": 250,
      }
    }
  >
    <View
      style={
        {
          "borderBottomColor": "rgba(0, 0, 0, 0.55)",
          "borderBottomWidth": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(240, 236, 228, 0.5)",
            "fontSize": 20,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        Title
      </Text>
    </View>
    <Text>
      body
    </Text>
  </View>
</View>
`;

exports[`surfaces (dark theme) AlertCard without a title 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 0.55)",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "#1C1A17",
        "borderRadius": 8,
        "marginTop": 260,
        "width": 250,
      }
    }
  >
    <Text>
      body
    </Text>
  </View>
</View>
`;

exports[`surfaces (dark theme) AnchoredPopover align=center 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "elevation": 24,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 1000,
      },
      {
        "height": 1334,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 0.15)",
        },
      ]
    }
  />
  <View
    pointerEvents="box-none"
    style={
      [
        {
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 72,
        },
        {
          "alignItems": "center",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#1C1A17",
            "borderColor": "rgba(0, 0, 0, 0.55)",
            "borderRadius": 14,
            "borderWidth": 0.5,
            "elevation": 6,
            "overflow": "hidden",
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.25,
            "shadowRadius": 3.84,
          },
          {
            "maxHeight": 867.1,
            "width": 320,
          },
        ]
      }
    >
      <RCTScrollView
        bounces={false}
        contentContainerStyle={
          {
            "padding": 16,
          }
        }
      >
        <View>
          <Text>
            popover
          </Text>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`surfaces (dark theme) AnchoredPopover align=end 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "elevation": 24,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 1000,
      },
      {
        "height": 1334,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 0.15)",
        },
      ]
    }
  />
  <View
    pointerEvents="box-none"
    style={
      [
        {
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 72,
        },
        {
          "alignItems": "flex-end",
          "paddingRight": 16,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#1C1A17",
            "borderColor": "rgba(0, 0, 0, 0.55)",
            "borderRadius": 14,
            "borderWidth": 0.5,
            "elevation": 6,
            "overflow": "hidden",
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.25,
            "shadowRadius": 3.84,
          },
          {
            "maxHeight": 867.1,
            "width": 320,
          },
        ]
      }
    >
      <RCTScrollView
        bounces={false}
        contentContainerStyle={
          {
            "padding": 16,
          }
        }
      >
        <View>
          <Text>
            popover
          </Text>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`surfaces (dark theme) BottomSheet with header 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#1C1A17",
        "borderTopEndRadius": 18,
        "borderTopStartRadius": 18,
        "marginTop": 100,
        "paddingBottom": 36,
      },
      {
        "transform": [
          {
            "translateY": 0,
          },
        ],
      },
    ]
  }
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      {
        "alignItems": "stretch",
        "gap": 16,
        "minHeight": 36,
      }
    }
  >
    <View
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "rgba(240, 236, 228, 0.5)",
          "borderRadius": 2.5,
          "height": 5,
          "marginTop": 8,
          "width": 50,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "flex-start",
          }
        }
      />
      <Text
        numberOfLines={1}
        style={
          {
            "color": "rgba(240, 236, 228, 0.5)",
            "fontSize": 22,
            "fontWeight": "600",
            "textAlign": "center",
          }
        }
      >
        Sheet
      </Text>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "flex-end",
          }
        }
      />
    </View>
  </View>
  <Text>
    content
  </Text>
</View>
`;

exports[`surfaces (dark theme) BottomSheetHeader with actions 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    {
      "alignItems": "stretch",
      "gap": 16,
      "minHeight": 36,
    }
  }
>
  <View
    style={
      {
        "alignSelf": "center",
        "backgroundColor": "rgba(240, 236, 228, 0.5)",
        "borderRadius": 2.5,
        "height": 5,
        "marginTop": 8,
        "width": 50,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "flexShrink": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <Text>
        Cancel
      </Text>
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "rgba(240, 236, 228, 0.5)",
          "fontSize": 22,
          "fontWeight": "600",
          "textAlign": "center",
        }
      }
    >
      Header
    </Text>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "flexShrink": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <Text>
        Save
      </Text>
    </View>
  </View>
</View>
`;

exports[`surfaces (dark theme) BottomSheetModal (web) 1`] = `
<View
  style={
    [
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      {
        "zIndex": 1000,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(0, 0, 0, 0.55)",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#1C1A17",
        "borderTopLeftRadius": 16,
        "borderTopRightRadius": 16,
        "bottom": 0,
        "left": 0,
        "maxHeight": 1133.8999999999999,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": -2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 12,
        "transform": [
          {
            "translateY": 1133.8999999999999,
          },
        ],
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "rgba(0, 0, 0, 0.55)",
          "borderBottomWidth": 0.5,
          "flexDirection": "row-reverse",
          "height": 64,
          "justifyContent": "space-between",
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#F0ECE4",
            "flex": 1,
            "fontSize": 18,
            "fontWeight": "700",
            "marginLeft": 12,
            "textAlign": "right",
          }
        }
      >
        Web sheet
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          aria-hidden="true"
          bbHeight={22}
          bbWidth={22}
          className="lucide lucide-x"
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#F0ECE4"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4293979364,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M18 6 6 18"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4293979364,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGPath
              d="m6 6 12 12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4293979364,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text>
        content
      </Text>
    </View>
  </View>
</View>
`;

exports[`surfaces (dark theme) GlassIconButton (solid fallback) 1`] = `
<ViewManagerAdapter_ExpoGlassEffect
  glassEffectStyle="regular"
  isInteractive={true}
  style={
    {
      "borderRadius": 20,
      "height": 40,
      "overflow": "hidden",
      "width": 40,
    }
  }
>
  <View
    accessibilityLabel="add"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={8}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        false,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      aria-hidden="true"
      bbHeight={20}
      bbWidth={20}
      className="lucide lucide-plus"
      fill="none"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#F0ECE4"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4293979364,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M5 12h14"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293979364,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M12 5v14"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293979364,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</ViewManagerAdapter_ExpoGlassEffect>
`;

exports[`surfaces (dark theme) IconButton at rest and pressed 1`] = `
{
  "pressed": {
    "backgroundColor": "#262320",
    "borderRadius": 9999,
    "opacity": 0.6,
    "padding": 8,
  },
  "rest": {
    "backgroundColor": "transparent",
    "borderRadius": 9999,
    "opacity": 1,
    "padding": 8,
  },
}
`;

exports[`surfaces (dark theme) ScreenLoader 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#1C1A17",
        "borderBottomWidth": undefined,
        "borderColor": undefined,
        "borderRadius": undefined,
        "borderWidth": undefined,
        "bottom": undefined,
        "flexDirection": "column",
        "flexGrow": undefined,
        "flexWrap": undefined,
        "gap": undefined,
        "height": undefined,
        "justifyContent": "center",
        "left": undefined,
        "opacity": undefined,
        "overflow": undefined,
        "padding": undefined,
        "paddingBottom": undefined,
        "paddingEnd": undefined,
        "paddingHorizontal": undefined,
        "paddingStart": undefined,
        "paddingTop": undefined,
        "paddingVertical": undefined,
        "position": undefined,
        "right": undefined,
        "top": undefined,
        "width": undefined,
        "zIndex": undefined,
      },
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      null,
    ]
  }
>
  <ActivityIndicator
    color="#6DA8F5"
  />
</View>
`;

exports[`surfaces (dark theme) SlideIndicator 1`] = `
<View
  style={
    {
      "alignSelf": "center",
      "backgroundColor": "rgba(240, 236, 228, 0.5)",
      "borderRadius": 2.5,
      "height": 5,
      "marginTop": 8,
      "width": 50,
    }
  }
/>
`;

exports[`surfaces (dark theme) Touchable rest/pressed styles and ripple 1`] = `
{
  "pressed": {
    "backgroundColor": "rgba(240, 236, 228, 0.04)",
  },
  "rest": undefined,
  "ripple": {
    "color": "rgba(240, 236, 228, 0.04)",
  },
}
`;

exports[`surfaces (dark theme) useFloatingTabBarStyle 1`] = `
{
  "backgroundColor": "transparent",
  "borderColor": "rgba(0, 0, 0, 0.55)",
  "borderRadius": 9999,
  "borderTopWidth": 0,
  "borderWidth": 0.5,
  "bottom": 42,
  "elevation": 8,
  "height": 56,
  "marginHorizontal": 16,
  "position": "absolute",
  "shadowColor": "#000000",
  "shadowOffset": {
    "height": 4,
    "width": 0,
  },
  "shadowOpacity": 0.15,
  "shadowRadius": 12,
}
`;

exports[`surfaces (light theme) AlertCard 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 0.5)",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "#FAF7F0",
        "borderRadius": 8,
        "marginTop": 260,
        "width": 250,
      }
    }
  >
    <View
      style={
        {
          "borderBottomColor": "rgba(0, 0, 0, 0.5)",
          "borderBottomWidth": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(42, 37, 33, 0.5)",
            "fontSize": 20,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        Title
      </Text>
    </View>
    <Text>
      body
    </Text>
  </View>
</View>
`;

exports[`surfaces (light theme) AlertCard without a title 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 0.5)",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "#FAF7F0",
        "borderRadius": 8,
        "marginTop": 260,
        "width": 250,
      }
    }
  >
    <Text>
      body
    </Text>
  </View>
</View>
`;

exports[`surfaces (light theme) AnchoredPopover align=center 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "elevation": 24,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 1000,
      },
      {
        "height": 1334,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 0.15)",
        },
      ]
    }
  />
  <View
    pointerEvents="box-none"
    style={
      [
        {
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 72,
        },
        {
          "alignItems": "center",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FAF7F0",
            "borderColor": "rgba(0, 0, 0, 0.5)",
            "borderRadius": 14,
            "borderWidth": 0.5,
            "elevation": 6,
            "overflow": "hidden",
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.25,
            "shadowRadius": 3.84,
          },
          {
            "maxHeight": 867.1,
            "width": 320,
          },
        ]
      }
    >
      <RCTScrollView
        bounces={false}
        contentContainerStyle={
          {
            "padding": 16,
          }
        }
      >
        <View>
          <Text>
            popover
          </Text>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`surfaces (light theme) AnchoredPopover align=end 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "elevation": 24,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 1000,
      },
      {
        "height": 1334,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 0.15)",
        },
      ]
    }
  />
  <View
    pointerEvents="box-none"
    style={
      [
        {
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 72,
        },
        {
          "alignItems": "flex-end",
          "paddingRight": 16,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FAF7F0",
            "borderColor": "rgba(0, 0, 0, 0.5)",
            "borderRadius": 14,
            "borderWidth": 0.5,
            "elevation": 6,
            "overflow": "hidden",
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.25,
            "shadowRadius": 3.84,
          },
          {
            "maxHeight": 867.1,
            "width": 320,
          },
        ]
      }
    >
      <RCTScrollView
        bounces={false}
        contentContainerStyle={
          {
            "padding": 16,
          }
        }
      >
        <View>
          <Text>
            popover
          </Text>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`surfaces (light theme) BottomSheet with header 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#FAF7F0",
        "borderTopEndRadius": 18,
        "borderTopStartRadius": 18,
        "marginTop": 100,
        "paddingBottom": 36,
      },
      {
        "transform": [
          {
            "translateY": 0,
          },
        ],
      },
    ]
  }
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      {
        "alignItems": "stretch",
        "gap": 16,
        "minHeight": 36,
      }
    }
  >
    <View
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "rgba(42, 37, 33, 0.5)",
          "borderRadius": 2.5,
          "height": 5,
          "marginTop": 8,
          "width": 50,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "flex-start",
          }
        }
      />
      <Text
        numberOfLines={1}
        style={
          {
            "color": "rgba(42, 37, 33, 0.5)",
            "fontSize": 22,
            "fontWeight": "600",
            "textAlign": "center",
          }
        }
      >
        Sheet
      </Text>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "flex-end",
          }
        }
      />
    </View>
  </View>
  <Text>
    content
  </Text>
</View>
`;

exports[`surfaces (light theme) BottomSheetHeader with actions 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    {
      "alignItems": "stretch",
      "gap": 16,
      "minHeight": 36,
    }
  }
>
  <View
    style={
      {
        "alignSelf": "center",
        "backgroundColor": "rgba(42, 37, 33, 0.5)",
        "borderRadius": 2.5,
        "height": 5,
        "marginTop": 8,
        "width": 50,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "flexShrink": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <Text>
        Cancel
      </Text>
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "rgba(42, 37, 33, 0.5)",
          "fontSize": 22,
          "fontWeight": "600",
          "textAlign": "center",
        }
      }
    >
      Header
    </Text>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "flexShrink": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <Text>
        Save
      </Text>
    </View>
  </View>
</View>
`;

exports[`surfaces (light theme) BottomSheetModal (web) 1`] = `
<View
  style={
    [
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      {
        "zIndex": 1000,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#FAF7F0",
        "borderTopLeftRadius": 16,
        "borderTopRightRadius": 16,
        "bottom": 0,
        "left": 0,
        "maxHeight": 1133.8999999999999,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": -2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 12,
        "transform": [
          {
            "translateY": 1133.8999999999999,
          },
        ],
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "rgba(0, 0, 0, 0.5)",
          "borderBottomWidth": 0.5,
          "flexDirection": "row-reverse",
          "height": 64,
          "justifyContent": "space-between",
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#2A2521",
            "flex": 1,
            "fontSize": 18,
            "fontWeight": "700",
            "marginLeft": 12,
            "textAlign": "right",
          }
        }
      >
        Web sheet
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          aria-hidden="true"
          bbHeight={22}
          bbWidth={22}
          className="lucide lucide-x"
          fill="none"
          focusable={false}
          height={22}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#2A2521"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 22,
                "width": 22,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={22}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4280952097,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M18 6 6 18"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4280952097,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
            <RNSVGPath
              d="m6 6 12 12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4280952097,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text>
        content
      </Text>
    </View>
  </View>
</View>
`;

exports[`surfaces (light theme) GlassIconButton (solid fallback) 1`] = `
<ViewManagerAdapter_ExpoGlassEffect
  glassEffectStyle="regular"
  isInteractive={true}
  style={
    {
      "borderRadius": 20,
      "height": 40,
      "overflow": "hidden",
      "width": 40,
    }
  }
>
  <View
    accessibilityLabel="add"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={8}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        false,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      aria-hidden="true"
      bbHeight={20}
      bbWidth={20}
      className="lucide lucide-plus"
      fill="none"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#2A2521"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4280952097,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M5 12h14"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4280952097,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M12 5v14"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4280952097,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</ViewManagerAdapter_ExpoGlassEffect>
`;

exports[`surfaces (light theme) IconButton at rest and pressed 1`] = `
{
  "pressed": {
    "backgroundColor": "#FFFFFF",
    "borderRadius": 9999,
    "opacity": 0.6,
    "padding": 8,
  },
  "rest": {
    "backgroundColor": "transparent",
    "borderRadius": 9999,
    "opacity": 1,
    "padding": 8,
  },
}
`;

exports[`surfaces (light theme) ScreenLoader 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FAF7F0",
        "borderBottomWidth": undefined,
        "borderColor": undefined,
        "borderRadius": undefined,
        "borderWidth": undefined,
        "bottom": undefined,
        "flexDirection": "column",
        "flexGrow": undefined,
        "flexWrap": undefined,
        "gap": undefined,
        "height": undefined,
        "justifyContent": "center",
        "left": undefined,
        "opacity": undefined,
        "overflow": undefined,
        "padding": undefined,
        "paddingBottom": undefined,
        "paddingEnd": undefined,
        "paddingHorizontal": undefined,
        "paddingStart": undefined,
        "paddingTop": undefined,
        "paddingVertical": undefined,
        "position": undefined,
        "right": undefined,
        "top": undefined,
        "width": undefined,
        "zIndex": undefined,
      },
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      null,
    ]
  }
>
  <ActivityIndicator
    color="#3E7FD1"
  />
</View>
`;

exports[`surfaces (light theme) SlideIndicator 1`] = `
<View
  style={
    {
      "alignSelf": "center",
      "backgroundColor": "rgba(42, 37, 33, 0.5)",
      "borderRadius": 2.5,
      "height": 5,
      "marginTop": 8,
      "width": 50,
    }
  }
/>
`;

exports[`surfaces (light theme) Touchable rest/pressed styles and ripple 1`] = `
{
  "pressed": {
    "backgroundColor": "rgba(42, 37, 33, 0.04)",
  },
  "rest": undefined,
  "ripple": {
    "color": "rgba(42, 37, 33, 0.04)",
  },
}
`;

exports[`surfaces (light theme) useFloatingTabBarStyle 1`] = `
{
  "backgroundColor": "transparent",
  "borderColor": "rgba(0, 0, 0, 0.5)",
  "borderRadius": 9999,
  "borderTopWidth": 0,
  "borderWidth": 0.5,
  "bottom": 42,
  "elevation": 8,
  "height": 56,
  "marginHorizontal": 16,
  "position": "absolute",
  "shadowColor": "#000000",
  "shadowOffset": {
    "height": 4,
    "width": 0,
  },
  "shadowOpacity": 0.15,
  "shadowRadius": 12,
}
`;
